Fix chop-wrap width & height

--- a/css/food_main.css
+++ b/css/food_main.css
@@ -73,8 +73,8 @@ ul.posts li {
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 0;
-    height: 0;
+    width: 11.1px;
+    height:7.5px;
     perspective: 100vmin;  
 }
 
